--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.github.cloudiator</groupId>
+  <parent>
+    <groupId>io.github.cloudiator</groupId>
+    <artifactId>project</artifactId>
+    <version>0.3.0-SNAPSHOT</version>
+  </parent>
   <artifactId>ocl</artifactId>
   <packaging>jar</packaging>
   <name>ocl</name>
@@ -40,6 +44,33 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>org.cloudiator.ocl.OclAgent</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id> <!-- this is used for inheritance merges -->
+            <phase>package</phase> <!-- bind to the packaging phase -->
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <!-- My dependencies -->
     <dependency>
@@ -52,11 +83,22 @@
       <artifactId>common-messaging</artifactId>
       <version>0.3.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.cloudiator.cloudharmony</groupId>
+      <artifactId>cloudharmony-client</artifactId>
+      <version>0.3.0-SNAPSHOT</version>
+    </dependency>
 
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.1.7</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.choco-solver</groupId>
+      <artifactId>choco-solver</artifactId>
+      <version>4.0.5</version>
     </dependency>
 
     <!-- Other dependencies required by eclipse stuff -->
