--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
       <version>0.3.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>io.github.cloudiator.common</groupId>
+      <artifactId>common-util</artifactId>
+      <version>0.3.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>io.github.cloudiator.cloudharmony</groupId>
       <artifactId>cloudharmony-client</artifactId>
       <version>0.3.0-SNAPSHOT</version>
