Adapted ocl listeners to new matchmaking messages

--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>org.cloudiator.ocl.OclAgent</mainClass>
+              <mainClass>org.cloudiator.ocl.MatchmakingAgent</mainClass>
             </manifest>
           </archive>
           <descriptorRefs>
