Some changes to choco solver. Integrated travis. Added Dockerfile

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,8 @@
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
+          <finalName>matchmaking-agent</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
         </configuration>
         <executions>
           <execution>
