--- a/pom.xml
+++ b/pom.xml
@@ -83,12 +83,10 @@
     <dependency>
       <groupId>io.github.cloudiator.common</groupId>
       <artifactId>common-messaging</artifactId>
-      <version>0.3.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>io.github.cloudiator.common</groupId>
       <artifactId>common-util</artifactId>
-      <version>0.3.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>io.github.cloudiator.cloudharmony</groupId>
@@ -99,13 +97,17 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.1.7</version>
     </dependency>
 
     <dependency>
       <groupId>org.choco-solver</groupId>
       <artifactId>choco-solver</artifactId>
       <version>4.0.5</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
     </dependency>
 
     <!-- Other dependencies required by eclipse stuff -->
