Improvements in matchmaking service. Added meta solver.

--- a/matchmaking-agent/pom.xml
+++ b/matchmaking-agent/pom.xml
@@ -110,6 +110,11 @@
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-all</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.inject.extensions</groupId>
+      <artifactId>guice-multibindings</artifactId>
+      <version>3.0</version>
+    </dependency>
 
     <!-- Other dependencies required by eclipse stuff -->
     <dependency>
