--- a/matchmaking-agent/src/main/resources/reference.conf
+++ b/matchmaking-agent/src/main/resources/reference.conf
@@ -1,5 +1,15 @@
 kafka.bootstrapServers = "localhost:9092"
+kafka.bootstrapServers = ${?KAFKA_BOOTSTRAP_SERVERS}
+
 kafka.groupId = matchmaking
+kafka.groupId = ${?KAFKA_GROUP_ID}
+
 kafka.responseTimeout = 10000
+kafka.responseTimeout = ${?KAFKA_RESPONSE_TIMEOUT}
 
 matchmaking.discoveryModel = DISCOVERY
+matchmaking.discoveryModel = ${?MATCHMAKING_DISCOVERY_MODEL}
+
+matchmaking.cacheTime = 60
+matchmaking.cacheTime = ${?MATCHMAKING_CACHE_TIME}
+
