--- a/matchmaking-agent/pom.xml
+++ b/matchmaking-agent/pom.xml
@@ -82,6 +82,12 @@
     </dependency>
 
     <dependency>
+      <groupId>net.spy</groupId>
+      <artifactId>spymemcached</artifactId>
+      <version>2.12.3</version>
+    </dependency>
+
+    <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
     </dependency>
