migrated to jib, fixed compile issue with changed matchmaking messsage

--- a/matchmaking-agent/pom.xml
+++ b/matchmaking-agent/pom.xml
@@ -12,6 +12,10 @@
 
   <artifactId>matchmaking-agent</artifactId>
 
+  <properties>
+    <docker.tag>manual</docker.tag>
+  </properties>
+
   <repositories>
     <repository>
       <id>ossrh</id>
@@ -29,29 +33,31 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <configuration>
+          <to>
+            registry.hub.docker.com/cloudiator/matchmaking-agent:${docker.tag}
+          </to>
+          <mainClass>org.cloudiator.matchmaking.MatchmakingAgent</mainClass>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>jar-with-dependencies</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-            <configuration>
-              <descriptors>
-                <descriptor>src/assembly/src.xml</descriptor>
-              </descriptors>
-              <finalName>matchmaking-agent</finalName>
-              <appendAssemblyId>false</appendAssemblyId>
-              <archive>
-                <manifest>
-                  <mainClass>org.cloudiator.matchmaking.MatchmakingAgent</mainClass>
-                </manifest>
-              </archive>
-            </configuration>
-          </execution>
-        </executions>
+        <configuration>
+          <descriptors>
+            <descriptor>src/assembly/src.xml</descriptor>
+          </descriptors>
+          <finalName>matchmaking-agent</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
+          <archive>
+            <manifest>
+              <mainClass>org.cloudiator.matchmaking.MatchmakingAgent</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
     </plugins>
   </build>
