FaasNodeCandidates generation improved

--- a/matchmaking-agent/src/main/resources/reference.conf
+++ b/matchmaking-agent/src/main/resources/reference.conf
@@ -13,3 +13,7 @@ matchmaking.discoveryModel = ${?MATCHMAKING_DISCOVERY_MODEL}
 matchmaking.cacheTime = 60
 matchmaking.cacheTime = ${?MATCHMAKING_CACHE_TIME}
 
+matchmaking.nodeGenerator.aws-ec2.memoryMin = 128
+matchmaking.nodeGenerator.aws-ec2.memoryMax = 3008
+matchmaking.nodeGenerator.aws-ec2.memoryIncrement = 64
+matchmaking.nodeGenerator.aws-ec2.runtimes = ["NODEJS", "PYTHON", "JAVA", "DOTNET", "GO"]
