Create Node Candidates for Azure Functions

--- a/matchmaking-agent/src/main/resources/reference.conf
+++ b/matchmaking-agent/src/main/resources/reference.conf
@@ -17,3 +17,8 @@ matchmaking.nodeGenerator.aws-ec2.memoryMin = 128
 matchmaking.nodeGenerator.aws-ec2.memoryMax = 3008
 matchmaking.nodeGenerator.aws-ec2.memoryIncrement = 64
 matchmaking.nodeGenerator.aws-ec2.runtimes = ["NODEJS", "PYTHON", "JAVA", "DOTNET", "GO"]
+
+matchmaking.nodeGenerator.azure.memoryMin = 1536
+matchmaking.nodeGenerator.azure.memoryMax = 1536
+matchmaking.nodeGenerator.azure.memoryIncrement = 1
+matchmaking.nodeGenerator.azure.runtimes = ["NODEJS", "JAVA", "DOTNET"]
