made solving timeout configurable

--- a/matchmaking-agent/src/main/resources/reference.conf
+++ b/matchmaking-agent/src/main/resources/reference.conf
@@ -13,6 +13,9 @@ matchmaking.discoveryModel = ${?MATCHMAKING_DISCOVERY_MODEL}
 matchmaking.cacheTime = 60
 matchmaking.cacheTime = ${?MATCHMAKING_CACHE_TIME}
 
+matchmaking.solvingTime = 5
+matchmaking.solvingTime = ${?MATCHMAKING_SOLVING_TIME}
+
 matchmaking.nodeGenerator.aws-ec2.memoryMin = 128
 matchmaking.nodeGenerator.aws-ec2.memoryMax = 3008
 matchmaking.nodeGenerator.aws-ec2.memoryIncrement = 64
