--- a/matchmaking-agent/pom.xml
+++ b/matchmaking-agent/pom.xml
@@ -16,21 +16,31 @@
     <docker.tag>manual</docker.tag>
   </properties>
 
-  <repositories>
-    <repository>
-      <id>ossrh</id>
-      <name>ossrh Snapshots</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
+
+  <profiles>
+  <profile>
+  <id>useSonatypeRepo</id>
+  <activation>
+  <activeByDefault>true</activeByDefault>
+  </activation>
+        <repositories>
+          <repository>
+            <id>ossrh</id>
+            <name>ossrh Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+              <enabled>false</enabled>
+            </releases>
+            <snapshots>
+              <enabled>true</enabled>
+            </snapshots>
+          </repository>
+        </repositories>
+  </profile>
+  </profiles>
 
   <build>
+    <finalName>matchmaking-agent</finalName>
     <plugins>
       <plugin>
         <groupId>com.google.cloud.tools</groupId>
@@ -50,7 +60,7 @@
           <descriptors>
             <descriptor>src/assembly/src.xml</descriptor>
           </descriptors>
-          <finalName>matchmaking-agent</finalName>
+
           <appendAssemblyId>false</appendAssemblyId>
           <archive>
             <manifest>
