--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 jdk:
 - oraclejdk8
 language: java
-install: mvn install -U -DskipTests=true
+install: mvn -q install -U -DskipTests=true
 script: mvn -q org.jacoco:jacoco-maven-plugin:prepare-agent install -Dmaven.javadoc.skip=true sonar:sonar
 after_success:
 - ci/deploy_snapshot.sh
