--- a/matchmaking-agent/src/main/resources/reference.conf
+++ b/matchmaking-agent/src/main/resources/reference.conf
@@ -4,7 +4,7 @@ kafka.bootstrapServers = ${?KAFKA_BOOTSTRAP_SERVERS}
 kafka.groupId = matchmaking
 kafka.groupId = ${?KAFKA_GROUP_ID}
 
-kafka.responseTimeout = 10000
+kafka.responseTimeout = 30000
 kafka.responseTimeout = ${?KAFKA_RESPONSE_TIMEOUT}
 
 matchmaking.discoveryModel = DISCOVERY
@@ -15,6 +15,9 @@ matchmaking.cacheTime = ${?MATCHMAKING_CACHE_TIME}
 
 matchmaking.solvingTime = 5
 matchmaking.solvingTime = ${?MATCHMAKING_SOLVING_TIME}
+
+matchmaking.considerQuota = true
+matchmaking.considerQuota = ${?MATCHMAKING_CONSIDER_QUOTA}
 
 matchmaking.nodeGenerator.aws-ec2.memoryMin = 128
 matchmaking.nodeGenerator.aws-ec2.memoryMax = 3008
