--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ dist: trusty
 jdk:
 - oraclejdk8
 language: java
-install: mvn -q install -U -DskipTests=true
-script: mvn -q org.jacoco:jacoco-maven-plugin:prepare-agent install -Dmaven.javadoc.skip=true sonar:sonar
+install: travis_wait mvn -q install -U -DskipTests=true
+script: travis_wait mvn -q org.jacoco:jacoco-maven-plugin:prepare-agent install -Dmaven.javadoc.skip=true sonar:sonar
 after_success:
 - ci/deploy_snapshot.sh
 - ci/publish-javadoc-to-gh-pages.sh
