--- a/matchmaking-agent/src/main/resources/reference.conf
+++ b/matchmaking-agent/src/main/resources/reference.conf
@@ -19,7 +19,7 @@ matchmaking.solvingTime = ${?MATCHMAKING_SOLVING_TIME}
 matchmaking.considerQuota = true
 matchmaking.considerQuota = ${?MATCHMAKING_CONSIDER_QUOTA}
 
-matchmaking.solvers = ["org.cloudiator.matchmaking.choco.ChocoSolver", "org.cloudiator.matchmaking.ocl.BestFitSolver"]
+matchmaking.solvers = ["org.cloudiator.matchmaking.choco.ChocoSolver", "org.cloudiator.matchmaking.ocl.BestFitSolver", "org.cloudiator.matchmaking.cmpl.CMPLSolver"]
 matchmaking.considerQuota = ${?MATCHMAKING_SOLVERS}
 
 matchmaking.nodeGenerator.aws-ec2.memoryMin = 128
